(lang dune 3.7)

(name helloworld)

(generate_opam_files true)

(source
 (github rishavb123/OCamlTesting))

(authors "Rishav Bhagat")

(maintainers "Rishav Bhagat")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name helloworld)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
